--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,7 +16,8 @@
     "react-scroll-motion": "^0.2.1",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
