added highlights for the current active channel and dms

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ FLASK_APP=app
 FLASK_ENV=development
 SECRET_KEY=<<your-secret>>
 DATABASE_URL=postgresql://user:password@localhost/database
+S3_BUCKET=sdfgsdf
+S3_KEY=dfgdfg
+S3_SECRET=sdfgsdfg
