--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.2",
+    "react-context-menu-wrapper": "^3.0.0",
     "react-dom": "^17.0.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
