--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ faker = "*"
 flask-socketio = "*"
 eventlet = "==0.30.2"
 python-engineio = "==4.1.0"
+boto3 = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
