--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ SQLAlchemy = "==1.3.19"
 Werkzeug = "==1.0.1"
 WTForms = "==2.3.3"
 Flask-JWT-Extended = "==3.24.1"
-email-validator = "*"
+email-validator = "==1.1.2"
 Flask-Migrate = "==2.5.3"
 Flask-Login = "==0.5.0"
 alembic = "==1.4.3"
@@ -27,17 +27,27 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 Mako = "==1.1.3"
 PyJWT = "==1.7.1"
-faker = "*"
-flask-socketio = "*"
 eventlet = "==0.30.2"
 python-engineio = "==4.1.0"
-boto3 = "*"
+boto3 = "==1.17.84"
+Faker = "==8.4.0"
+Flask-SocketIO = "==5.1.0"
+bidict = "==0.21.2"
+botocore = "==1.20.84"
+dnspython = "==1.16.0"
+greenlet = "==1.1.0"
+idna = "==3.1"
+jmespath = "==0.10.0"
+python-socketio = "==5.3.0"
+s3transfer = "==0.4.2"
+text-unidecode = "==1.3"
+urllib3 = "==1.26.5"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
 autopep8 = "*"
 pylint = "*"
-faker = "*"
+Faker = "*"
 
 [requires]
 python_version = "3.9"
