--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@
 
 -i https://pypi.org/simple
 alembic==1.4.3
-bidict==0.21.2; python_version >= '3.6'
+bidict==0.21.2
 boto3==1.17.84
-botocore==1.20.84; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+botocore==1.20.84
 click==7.1.2
-dnspython==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+dnspython==1.16.0
 email-validator==1.1.2
 eventlet==0.30.2
 faker==8.4.0
@@ -23,12 +23,12 @@ flask-socketio==5.1.0
 flask-sqlalchemy==2.4.4
 flask-wtf==0.14.3
 flask==1.1.2
-greenlet==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+greenlet==1.1.0
 gunicorn==20.0.4
-idna==3.1; python_version >= '3.4'
+idna==3.1
 itsdangerous==1.1.0
 jinja2==2.11.2
-jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+jmespath==0.10.0
 mako==1.1.3
 markupsafe==1.1.1
 pyjwt==1.7.1
@@ -41,6 +41,6 @@ s3transfer==0.4.2
 six==1.15.0
 sqlalchemy==1.3.19
 text-unidecode==1.3
-urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.5
 werkzeug==1.0.1
 wtforms==2.3.3
