--- a/Pipfile
+++ b/Pipfile
@@ -36,12 +36,12 @@ bidict = "==0.21.2"
 botocore = "==1.20.84"
 dnspython = "==1.16.0"
 greenlet = "==1.1.0"
-idna = "==3.1"
 jmespath = "==0.10.0"
 python-socketio = "==5.3.0"
 s3transfer = "==0.4.2"
 text-unidecode = "==1.3"
 urllib3 = "==1.26.5"
+requests = "*"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
