--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ alembic==1.4.3
 bidict==0.21.2
 boto3==1.17.84
 botocore==1.20.84
+certifi==2021.5.30
+chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 click==7.1.2
 dnspython==1.16.0
 email-validator==1.1.2
@@ -25,7 +27,7 @@ flask-wtf==0.14.3
 flask==1.1.2
 greenlet==1.1.0
 gunicorn==20.0.4
-idna==3.1
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 itsdangerous==1.1.0
 jinja2==2.11.2
 jmespath==0.10.0
@@ -37,6 +39,7 @@ python-dotenv==0.14.0
 python-editor==1.0.4
 python-engineio==4.1.0
 python-socketio==5.3.0
+requests==2.25.1
 s3transfer==0.4.2
 six==1.15.0
 sqlalchemy==1.3.19
